# ChangeLog for dev-python/python-ceilometerclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-ceilometerclient/ChangeLog,v 1.1 2013/10/23 05:56:58 prometheanfire Exp $

*python-ceilometerclient-1.0.6 (23 Oct 2013)

  23 Oct 2013; Matthew Thode <prometheanfire@gentoo.org> +metadata.xml,
  +python-ceilometerclient-1.0.6.ebuild:
  adding this for havana horizon support